# A1_computacao_escalavel

./: .gitignore  README.md  run_it.sh
dashboard/: main.py
mock/: client.py  data_analytics.proto  graph_user_flow.py  main.py  models.py  rpc.py  simulation.py
mock/proto/: data_analytics.proto  data_analytics_pb2.py  data_analytics_pb2_grpc.py
processed/: BuyRanking.csv  CountBuy.csv  CountView.csv  ProdView.csv  ViewRanking.csv
shared_proto/: data_analytics.proto
src/: AbstractTrigger.hpp  CMakeLists.txt  DataFrame.hpp  DataHandler.hpp  DataRepo.hpp  DirectoryMonitor.hpp  ETL.hpp  Makefile  Observer.hpp  Pipeline.hpp  Queue.hpp  RequestTrigger.hpp  SQLite.hpp  Semaphore.hpp  Series.hpp  ThreadPool.hpp  TimerTrigger.hpp  data_analytics.proto  main.cpp  pipeline.cpp  server.cpp  server.py  test.csv  testDataFrame.cpp  testDataHandler.cpp  testDataRepo.cpp  testMonitorFiles.cpp  testSeries.cpp  testTrigger.cpp  text.csv  triggers.cpp
tests/: example.txt  testCPP.cpp  testDataFrame.cpp  testDataHandler.cpp  testDataRepo.cpp  testFileReader.cpp  testMonitorFiles.cpp  testQueue.cpp  testSemaphore.cpp  testSeries.cpp  testThreadPool.cpp  testTrigger.cpp  test_main1.sh  test_pipeline.cpp
